[package]
name = "okchain-rust-sdk"
version = "0.1.0"
authors = ["zjhsdtc <zjhsdtc@gmail.com>"]
edition = "2018"

license = "CC0-1.0"
homepage = "https://github.com/zjhmale/okchain-rust-sdk"
repository = "https://github.com/zjhmale/okchain-rust-sdk"
description = "Rust SDK for OKChain."
keywords = ["dex", "defi", "crypto", "okchain", "blockchain", "rpc"]
readme = "README.md"

[lib]
name = "okchain_sdk_lib"
path = "src/lib.rs"

[[bin]]
name = "okchain_sdk_bin"
path = "src/main.rs"

[dependencies]
jsonrpc-core-client = "14.2.0"
jsonrpc-core = "14.2.0"
jsonrpc-derive = "14.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.9"
reqwest = "0.9"
failure = "0.1.5"
base64 = "0.12.3"
hex = "0.4.2"
regex = "1"
